5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4177/executions/1595_2895.log
== TEST (2019-03-21 17:48:41) 
-- CODE:
input (5)
print (100)
var = input ()
-- OUTPUT:
5100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:52:41) 
-- CODE:
input (8)
print (100.0)
var = input (40.0)
		
				
-- OUTPUT:
8100.0
40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:52:53) 
-- CODE:
input (5)
print (100.0)
var = input (40.0)
		
				
-- OUTPUT:
5100.0
40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:53:06) 
-- CODE:
input (5)
print (100)
var = input (40)
		
				
-- OUTPUT:
5100
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:53:35) 
-- CODE:
input (5)
print (100)
var = input (5)
		
				
-- OUTPUT:
5100
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:08:13) 
-- CODE:
var=float(int(input("a quantidade de jogos a serem encomendados?")))
var2=float(input("o valor unitario de cada jogo?")
var3=float(input("o valor do frete? "))
			  
total=(var*var)+var3
				
print(total)
-- ERROR:
File "XXXX", line 3
    var3=float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:08:27) 
-- CODE:
var=float(int(input("a quantidade de jogos a serem encomendados?")))
var2=float(input("o valor unitario de cada jogo?")
var3=float(input(" o valor do frete? "))
			  
total=(var*var)+var3
				
print(total)
-- ERROR:
File "XXXX", line 3
    var3=float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:09:26) 
-- CODE:
var=float(int(input("a quantidade de jogos a serem encomendados?")))
var2=float(input("o valor unitario de cada jogo?"))
var3=float(input("o valor do frete? "))
			  
total=(var*var)+var3
				
print(total)
-- OUTPUT:
222.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:09:40) 
-- CODE:
var=float(int(input("a quantidade de jogos a serem encomendados?")))
var2=float(input("o valor unitario de cada jogo?"))
var3=float(input("o valor do frete? "))
			  
total=(var*var)+var3
				
print(total)
-- OUTPUT:
222.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:10:09) 
-- CODE:
var=float(int(input("a quantidade de jogos a serem encomendados?")))
var2=float(input("o valor unitario de cada jogo?"))
var3=float(input("o valor do frete? "))
			  
total=(var*var)+var3
				
print(total)
-- EXECUTION TIME:
0.167488
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
222.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
195.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
60837.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:10:35) 
-- CODE:
var=float(int(input("a quantidade de jogos a serem encomendados?")))
var2=float(input("o valor unitario de cada jogo?"))
var3=float(input("o valor do frete? "))
			  
total=(var*var)+var3
				
print(total)
-- OUTPUT:
222.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:11:35) 
-- CODE:
var=float(int(input("a quantidade de jogos a serem encomendados?")))
var2=float(input("o valor unitario de cada jogo?"))
var3=float(input("o valor do frete? "))
			  
total=(var*var)+var3
				
print(total)
-- OUTPUT:
222.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:11:48) 
-- CODE:
var=float(int(input("a quantidade de jogos a serem encomendados?")))
var2=float(input("o valor unitario de cada jogo?"))
var3=float(input("o valor do frete? "))
			  
total=(var*var2)+var3
				
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:12:08) 
-- CODE:
var=float(int(input("a quantidade de jogos a serem encomendados?")))
var2=float(input("o valor unitario de cada jogo?"))
var3=float(input("o valor do frete? "))
			  
total=(var*var2)+var3
				
print(total)
-- EXECUTION TIME:
0.163216
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:33:37) 
-- CODE:
var=float(int(input("a quantidade de jogos a serem encomendados?")))
var2=float(input("o valor unitario de cada jogo?"))
var3=float(input("o valor do frete? "))
			  
total=(var*var2)+var3
				
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:33:57) 
-- CODE:
var=float(int(input("a quantidade de jogos a serem encomendados?")))
var2=float(input("o valor unitario de cada jogo?"))
var3=float(input("o valor do frete? "))
			  
total=(var*var2)+var3
				
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
